flickering fix

--- a/src/layout/navigation/navigation.scss
+++ b/src/layout/navigation/navigation.scss
@@ -1,5 +1,5 @@
 .navbar {
-    position: sticky;
+    position: absolute;
     top: 0;
     z-index: 9990;
     background-color: var(--main);
